--- a/sass/layot/_our-team.scss
+++ b/sass/layot/_our-team.scss
@@ -1,20 +1,26 @@
+.team {
+  @include paddings-t-b(60px);
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    @include paddings-t-b(94px);
+  }
+}
+
 .team-title {
   @include title();
 }
 
-.team {
-  @include paddings-t-b(94px);
-  background-color: $button-backgroung-color;
-}
-.team-list {
-  display: flex;
-  justify-content: space-between;
-}
+// .team-list {
+//   display: flex;
+//   justify-content: space-between;
+// }
 
-.team-item {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+.team-container {
+  @include paddings-t-b(30px);
+  text-align: center;
+  background: $button-text-color;
 }
 
 .team-name {
@@ -32,4 +38,10 @@
   font-size: 16px;
   line-height: 1.188;
   text-align: center;
+}
+
+.team-item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
