--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,10 +1,17 @@
 @mixin title() {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.167;
+  font-size: 28px;
+  line-height: 1, 179;
   text-align: center;
   color: $title-color;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.167;
+  }
 }
 
 @mixin paddings-t-b($size) {
