--- a/sass/layot/_header.scss
+++ b/sass/layot/_header.scss
@@ -1,135 +1,173 @@
-.logo {
-  margin-right: 90px;
-
-  font-family: $logo-font;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.192;
-  color: $logo-second-part;
-}
-
-.logo-footer {
-  margin-bottom: 20px;
-
-  font-family: $logo-font;
-  color: $button-text-color;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.192;
-  letter-spacing: 0.03em;
-}
-.logo-first-part {
-  color: $focus-color;
-}
-
-.navigation-link {
-  position: relative;
-  @include paddings-t-b(32px);
-
-  letter-spacing: 0.02em;
-  color: $title-color;
-
-  transition-property: color;
-  transition-duration: $transition-duration;
-  transition-timing-function: $timing-function;
-  &:hover,
-  &:focus {
-    color: $focus-color;
-  }
-}
-
-.navigation-link.current::after {
-  content: '';
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-
-  width: 100%;
-  height: 4px;
-  background: $focus-color;
-  border-radius: 2px;
-  transform: scaleY(1);
-
-  transition-property: transform;
-  transition-duration: $transition-duration;
-  transition-timing-function: $timing-function;
-}
-.navigation-link.current:hover::after,
-.navigation-link.current:focus::after {
-  transform: scaleY(0);
-}
-
-.navigation-item {
-  & .navigation-link.current {
-    color: $focus-color;
-  }
-
-  &:not(:last-child) {
-    margin-right: 50px;
-  }
-}
-.header .container {
-  display: flex;
-}
-
 .header {
+  @include paddings-t-b(10px);
   border-bottom: 1px solid #ececec;
 }
-.navigation {
-  display: flex;
-  align-items: center;
-}
 
-.navigation-list {
-  display: flex;
-  align-items: center;
-}
+@media screen and(max-width:767px) {
+  .navigation-list {
+    display: none;
+  }
 
-.contacts {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-.contacts-item:not(:first-child) {
-  margin-left: 50px;
-}
-.mail-link {
-  display: flex;
-  align-items: center;
-  @include paddings-t-b(32px);
+  .contacts {
+    display: none;
+  }
+  .burger-btn,
+  .mobile-close-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+  }
 
-  letter-spacing: 0.02em;
-  color: $text-color;
+  .mobile-close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
 
-  transition-property: color;
-  transition-duration: $transition-duration;
-  transition-timing-function: $timing-function;
-  &:hover,
-  &:focus {
-    color: $focus-color;
+  .mobile-menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-100%);
+    transition-property: transform;
+    transition-duration: $transition-duration;
+    transition-timing-function: $timing-function;
+
+    max-width: 480px;
+    width: 100%;
+    height: 100vw;
+    background-color: $button-text-color;
+
+    @include paddings-t-b(48px);
+    @include paddings-r-l(40px);
+  }
+
+  .mobile-menu.is-open {
+    transform: translateX(-50%) translateY(0%);
   }
 }
 
-.tel-link {
-  display: flex;
-  align-items: center;
-  @include paddings-t-b(32px);
-
-  letter-spacing: 0.02em;
-  color: $text-color;
-
-  transition-property: color;
-  transition-duration: $transition-duration;
-  transition-timing-function: $timing-function;
-
-  &:hover,
-  &:focus {
-    color: $focus-color;
+@media screen and(min-width:768px) {
+  .burger-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
   }
 }
-.icon-mail,
-.icon-tel {
-  margin-right: 10px;
-  fill: currentColor;
-}
+
+// .logo {
+//   margin-right: 90px;
+
+//   font-family: $logo-font;
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 1.192;
+//   color: $logo-second-part;
+// }
+
+// .logo-footer {
+//   margin-bottom: 20px;
+
+//   font-family: $logo-font;
+//   color: $button-text-color;
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 1.192;
+//   letter-spacing: 0.03em;
+// }
+// .logo-first-part {
+//   color: $focus-color;
+// }
+
+// .navigation-link {
+//   position: relative;
+//   @include paddings-t-b(32px);
+
+//   letter-spacing: 0.02em;
+//   color: $title-color;
+
+//   transition-property: color;
+//   transition-duration: $transition-duration;
+//   transition-timing-function: $timing-function;
+//   &:hover,
+//   &:focus {
+//     color: $focus-color;
+//   }
+// }
+
+// .navigation-link.current::after {
+//   content: '';
+//   display: block;
+//   position: absolute;
+//   left: 0;
+//   bottom: 0;
+
+//   width: 100%;
+//   height: 4px;
+//   background: $focus-color;
+//   border-radius: 2px;
+//   transform: scaleY(1);
+
+//   transition-property: transform;
+//   transition-duration: $transition-duration;
+//   transition-timing-function: $timing-function;
+// }
+// .navigation-link.current:hover::after,
+// .navigation-link.current:focus::after {
+//   transform: scaleY(0);
+// }
+
+// .navigation-item {
+//   & .navigation-link.current {
+//     color: $focus-color;
+//   }
+
+//   &:not(:last-child) {
+//     margin-right: 50px;
+//   }
+// }
+
+// .contacts-item:not(:first-child) {
+//   margin-left: 50px;
+// }
+// .mail-link {
+//   display: flex;
+//   align-items: center;
+//   @include paddings-t-b(32px);
+
+//   letter-spacing: 0.02em;
+//   color: $text-color;
+
+//   transition-property: color;
+//   transition-duration: $transition-duration;
+//   transition-timing-function: $timing-function;
+//   &:hover,
+//   &:focus {
+//     color: $focus-color;
+//   }
+// }
+
+// .tel-link {
+//   display: flex;
+//   align-items: center;
+//   @include paddings-t-b(32px);
+
+//   letter-spacing: 0.02em;
+//   color: $text-color;
+
+//   transition-property: color;
+//   transition-duration: $transition-duration;
+//   transition-timing-function: $timing-function;
+
+//   &:hover,
+//   &:focus {
+//     color: $focus-color;
+//   }
+// }
+// .icon-mail,
+// .icon-tel {
+//   margin-right: 10px;
+//   fill: currentColor;
+// }
