--- a/sass/layot/_our-team.scss
+++ b/sass/layot/_our-team.scss
@@ -12,15 +12,17 @@
   @include title();
 }
 
-// .team-list {
-//   display: flex;
-//   justify-content: space-between;
-// }
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
 .team-container {
   @include paddings-t-b(30px);
   text-align: center;
   background: $button-text-color;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-name {
@@ -41,7 +43,19 @@
 }
 
 .team-item {
+  margin-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-item {
+    margin-bottom: 0px;
+  }
 }
