--- a/sass/layot/_hero.scss
+++ b/sass/layot/_hero.scss
@@ -1,40 +1,113 @@
 .hero {
   text-align: center;
-  @include paddings-t-b(200px);
-
+  @include paddings-t-b(118px);
   background: $dark-background-color;
+  @media screen and (min-width: 1200px) {
+    @include paddings-t-b(200px);
+  }
 }
 
 .overlay {
   background-color: #c4c4c4;
   max-width: 1600px;
-  height: 600px;
+  height: 400px;
   margin-right: auto;
   margin-left: auto;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url('../image/hero-min.jpg');
+    url('../image/studio/hero/optima-hero/hero-mobile.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) {
+  .overlay {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../image/studio/hero/optima-hero/hero-mobile@2x.jpg');
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .overlay {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../image/studio/hero/optima-hero/hero-tablet.jpg');
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .overlay {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../image/studio/hero/optima-hero/hero-tablet@2x.jpg');
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .overlay {
+    height: 600px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../image/studio/hero/optima-hero/hero-desktop.jpg');
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+  screen and (min-resolution: 192dpi) and (min-width: 1200px),
+  screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .overlay {
+    height: 600px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../image/studio/hero/optima-hero/hero-desktop@2x.jpg');
+  }
+}
+
 .hero-title {
-  width: 700px;
+  text-align: center;
   margin-right: auto;
   margin-left: auto;
+  @media screen and (min-width: 768px) {
+    width: 360px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 700px;
+  }
 }
 
 .main-title {
-  margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.364;
+  font-size: 26px;
+  line-height: 1, 615;
+  text-align: center;
   letter-spacing: 0.06em;
+  margin-bottom: 30px;
   text-transform: uppercase;
   color: $button-text-color;
+
+  @media screen and (min-width: 1200px) {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.364;
+  }
 }
 
 .order-button {
@@ -60,46 +133,3 @@
     background-color: $order-button-color;
   }
 }
-
-// .hero {
-//   width: 480px;
-//   height: 320px;
-//   background-image: url("photo.png");
-//   background-size: cover;
-// }
-
-// @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
-//   screen and (min-resolution: 192dpi) and (min-width: 320px),
-//   screen and (min-resolution: 2dppx) and (min-width: 320px) {
-//   .hero {
-//     background-image: url("photo@2x.png");
-//   }
-// }
-
-// @media screen and (min-width: 768px) {
-//   .hero {
-//     background-image: url("photo-tablet.png");
-//   }
-// }
-
-// @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-//   screen and (min-resolution: 192dpi) and (min-width: 768px),
-//   screen and (min-resolution: 2dppx) and (min-width: 768px) {
-//   .hero {
-//     background-image: url("photo-tablet@2x.png");
-//   }
-// }
-
-// @media screen and (min-width: 1200px) {
-//   .hero {
-//     background-image: url("photo-desktop.png");
-//   }
-// }
-
-// @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
-//   screen and (min-resolution: 192dpi) and (min-width: 1200px),
-//   screen and (min-resolution: 2dppx) and (min-width: 1200px) {
-//   .hero {
-//     background-image: url("photo-desktop@2x.png");
-//   }
-// }
