--- a/sass/layot/_portfolio-galery.scss
+++ b/sass/layot/_portfolio-galery.scss
@@ -1,3 +1,8 @@
+// .pfl-container {
+//   @include paddings-t-b(20px);
+//   @include paddings-r-l(24px);
+//   background: $button-text-color;
+
 .portfolio-galery {
   display: flex;
   flex-wrap: wrap;
