--- a/css/main.css
+++ b/css/main.css
@@ -842,8 +842,15 @@ label > a {
 }
 
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .client-title {
@@ -866,17 +873,44 @@ label > a {
 
 .client-list {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
 .clients-item {
   width: 170px;
   height: 90px;
+  margin-right: 30px;
+  margin-bottom: 0px;
 }
 
-.clients-item:not(:last-child) {
-  margin-right: 30px;
+.clients-item:last-child {
+  margin-right: 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients-item {
+    width: 226px;
+    margin-bottom: 30px;
+  }
+  .clients-item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .clients-item:nth-child(3n):nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .clients-item {
+    width: 210px;
+    margin-bottom: 30px;
+  }
+  .clients-item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .clients-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
 }
 
 .client-link {
