--- a/sass/layot/_clients.scss
+++ b/sass/layot/_clients.scss
@@ -1,5 +1,8 @@
 .clients {
-  @include paddings-t-b(94px);
+  @include paddings-t-b(60px);
+  @media screen and (min-width: 1200) {
+    @include paddings-t-b(94px);
+  }
 }
 
 .client-title {
@@ -8,15 +11,41 @@
 
 .client-list {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
 .clients-item {
   width: 170px;
   height: 90px;
-  &:not(:last-child) {
-    margin-right: 30px;
+  margin-right: 30px;
+  margin-bottom: 0px;
+  &:last-child {
+    margin-right: 0;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 226px;
+
+    margin-bottom: 30px;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  @media screen and (min-width: 320px) and(max-width:767px) {
+    width: 210px;
+    margin-bottom: 30px;
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
   }
 }
 
