--- a/css/main.css
+++ b/css/main.css
@@ -409,10 +409,84 @@ label > a {
   }
 }
 
+.logo-first-part {
+  color: #2196f3;
+}
+
+.mail-link {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mail-link:hover, .mail-link:focus {
+  color: #2196f3;
+}
+
+.tel-link {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.tel-link:hover, .tel-link:focus {
+  color: #2196f3;
+}
+
+.icon-mail,
+.icon-tel {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
   background: #2f303a;
+}
+
+.flex-footer {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .flex-footer {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+}
+
+.logo-footer {
+  margin-bottom: 20px;
+  font-family: "Raleway", sans-serif;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.167;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    font-size: 26px;
+    line-height: 1.192;
+  }
+}
+
+.address {
+  margin-bottom: 8px;
 }
 
 .address-map {
@@ -420,6 +494,10 @@ label > a {
   font-weight: 400;
   line-height: 1.714;
   color: #ffffff;
+}
+
+.contact-flex-footer {
+  margin-bottom: 60px;
 }
 
 .contacts-footer {
@@ -434,17 +512,17 @@ label > a {
 }
 
 .contacts-footer .contacts-item:not(:last-child) {
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 
 .contacts-footer .mail-link,
 .contacts-footer .tel-link {
+  justify-content: center;
   padding: 0 0;
 }
 
-.address {
-  margin-bottom: 10px;
-  margin-right: auto;
+.follow-footer {
+  margin-bottom: 60px;
 }
 
 .follow {
@@ -454,30 +532,10 @@ label > a {
   color: #ffffff;
 }
 
-.flex-footer {
-  display: flex;
-  align-items: baseline;
-}
-
-.contact-flex-footer {
-  margin-right: 70px;
-  width: 230px;
-}
-
-.follow-footer {
-  width: 206px;
-  margin-right: 94px;
-}
-
-.follow-form-wrapper {
-  display: flex;
-  margin-top: 20px;
-}
-
 .follow-mail {
-  margin-right: 11px;
+  margin-bottom: 20px;
   padding-left: 16px;
-  width: 360px;
+  width: 100%;
   height: 50px;
   color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -501,7 +559,10 @@ label > a {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 200px;
+  width: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 0 auto;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
@@ -876,6 +937,12 @@ label > a {
   flex-wrap: wrap;
 }
 
+@media screen and (max-width: 767px) {
+  .client-list {
+    margin: -15px;
+  }
+}
+
 .clients-item {
   width: 170px;
   height: 90px;
@@ -887,33 +954,30 @@ label > a {
   margin-right: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .clients-item {
+    width: calc((100% - 30px * 2) / 2);
+    margin: 15px;
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients-item {
-    width: 226px;
-    margin-bottom: 30px;
-  }
-  .clients-item:nth-child(3n) {
-    margin-right: 0;
-  }
-  .clients-item:nth-child(3n):nth-last-child(-n + 3) {
-    margin-bottom: 0;
+    width: calc((100% - 30px * 3) / 3);
+    margin: 15px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1200px) {
   .clients-item {
-    width: 210px;
-    margin-bottom: 30px;
+    width: calc((100% - 30px * 5) / 6);
   }
-  .clients-item:nth-child(2n) {
-    margin-right: 0;
-  }
-  .clients-item:nth-last-child(-n + 2) {
-    margin-bottom: 0;
+  .clients-item:not(:nth-child(6n)) {
+    margin-right: 30px;
   }
 }
 
-.client-link {
+.clients-item .client-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -927,7 +991,7 @@ label > a {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-link:hover, .client-link:focus {
+.clients-item .client-link:hover, .clients-item .client-link:focus {
   border: 1px solid #2196f3;
   fill: #2196f3;
   cursor: pointer;
