--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -257,10 +257,84 @@ button {
   }
 }
 
+.logo-first-part {
+  color: #2196f3;
+}
+
+.mail-link {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mail-link:hover, .mail-link:focus {
+  color: #2196f3;
+}
+
+.tel-link {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.tel-link:hover, .tel-link:focus {
+  color: #2196f3;
+}
+
+.icon-mail,
+.icon-tel {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
   background: #2f303a;
+}
+
+.flex-footer {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .flex-footer {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+}
+
+.logo-footer {
+  margin-bottom: 20px;
+  font-family: "Raleway", sans-serif;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.167;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    font-size: 26px;
+    line-height: 1.192;
+  }
+}
+
+.address {
+  margin-bottom: 8px;
 }
 
 .address-map {
@@ -268,6 +342,10 @@ button {
   font-weight: 400;
   line-height: 1.714;
   color: #ffffff;
+}
+
+.contact-flex-footer {
+  margin-bottom: 60px;
 }
 
 .contacts-footer {
@@ -282,17 +360,17 @@ button {
 }
 
 .contacts-footer .contacts-item:not(:last-child) {
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 
 .contacts-footer .mail-link,
 .contacts-footer .tel-link {
+  justify-content: center;
   padding: 0 0;
 }
 
-.address {
-  margin-bottom: 10px;
-  margin-right: auto;
+.follow-footer {
+  margin-bottom: 60px;
 }
 
 .follow {
@@ -302,30 +380,10 @@ button {
   color: #ffffff;
 }
 
-.flex-footer {
-  display: flex;
-  align-items: baseline;
-}
-
-.contact-flex-footer {
-  margin-right: 70px;
-  width: 230px;
-}
-
-.follow-footer {
-  width: 206px;
-  margin-right: 94px;
-}
-
-.follow-form-wrapper {
-  display: flex;
-  margin-top: 20px;
-}
-
 .follow-mail {
-  margin-right: 11px;
+  margin-bottom: 20px;
   padding-left: 16px;
-  width: 360px;
+  width: 100%;
   height: 50px;
   color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -349,7 +407,10 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 200px;
+  width: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 0 auto;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
