--- a/sass/layot/_clients.scss
+++ b/sass/layot/_clients.scss
@@ -12,6 +12,9 @@
 .client-list {
   display: flex;
   flex-wrap: wrap;
+  @media screen and (max-width: 767px) {
+    margin: -15px;
+  }
 }
 
 .clients-item {
@@ -23,49 +26,41 @@
     margin-right: 0;
   }
 
+  @media screen and (max-width: 767px) {
+    width: calc((100% - 30px * 2) / 2);
+    margin: 15px;
+  }
+
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    width: 226px;
+    width: calc((100% - 30px * 3) / 3);
+    margin: 15px;
+  }
 
-    margin-bottom: 30px;
-
-    &:nth-child(3n) {
-      margin-right: 0;
-
-      &:nth-last-child(-n + 3) {
-        margin-bottom: 0;
-      }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 30px * 5) / 6);
+    &:not(:nth-child(6n)) {
+      margin-right: 30px;
     }
   }
 
-  @media screen and (min-width: 320px) and(max-width:767px) {
-    width: 210px;
-    margin-bottom: 30px;
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-    &:nth-last-child(-n + 2) {
-      margin-bottom: 0;
-    }
-  }
-}
+  .client-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid $icon-color;
+    border-radius: 4px;
+    fill: $icon-color;
 
-.client-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  border: 1px solid $icon-color;
-  border-radius: 4px;
-  fill: $icon-color;
-
-  transition-property: border, fill;
-  transition-duration: $transition-duration;
-  transition-timing-function: $timing-function;
-  &:hover,
-  &:focus {
-    border: 1px solid $focus-color;
-    fill: $focus-color;
-    cursor: pointer;
+    transition-property: border, fill;
+    transition-duration: $transition-duration;
+    transition-timing-function: $timing-function;
+    &:hover,
+    &:focus {
+      border: 1px solid $focus-color;
+      fill: $focus-color;
+      cursor: pointer;
+    }
   }
 }
