--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -309,14 +309,6 @@ button {
   text-align: center;
 }
 
-@media screen and (min-width: 768px) {
-  .flex-footer {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-}
-
 .logo-footer {
   margin-bottom: 20px;
   font-family: "Raleway", sans-serif;
@@ -344,10 +336,6 @@ button {
   color: #ffffff;
 }
 
-.contact-flex-footer {
-  margin-bottom: 60px;
-}
-
 .contacts-footer {
   font-weight: 400;
   line-height: 1.714;
@@ -369,8 +357,11 @@ button {
   padding: 0 0;
 }
 
-.follow-footer {
-  margin-bottom: 60px;
+@media screen and (max-width: 1199px) {
+  .follow-footer,
+  .contact-flex-footer {
+    margin-bottom: 60px;
+  }
 }
 
 .follow {
@@ -381,15 +372,21 @@ button {
 }
 
 .follow-mail {
-  margin-bottom: 20px;
   padding-left: 16px;
   width: 100%;
+  max-width: 450px;
   height: 50px;
   color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
+}
+
+@media screen and (max-width: 1199px) {
+  .follow-mail {
+    margin-bottom: 20px;
+  }
 }
 
 .follow-mail:focus {
