--- a/sass/layot/_footer.scss
+++ b/sass/layot/_footer.scss
@@ -4,11 +4,6 @@
 }
 .flex-footer {
   text-align: center;
-  @media screen and (min-width: 768px) {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
 }
 
 .logo-footer {
@@ -33,9 +28,6 @@
   line-height: 1.714;
   color: $button-text-color;
 }
-.contact-flex-footer {
-  margin-bottom: 60px;
-}
 
 .contacts-footer {
   font-weight: 400;
@@ -56,8 +48,11 @@
   }
 }
 
-.follow-footer {
-  margin-bottom: 60px;
+@media screen and (max-width: 1199px) {
+  .follow-footer,
+  .contact-flex-footer {
+    margin-bottom: 60px;
+  }
 }
 .follow {
   margin-bottom: 20px;
@@ -65,22 +60,20 @@
   text-transform: uppercase;
   color: $button-text-color;
 }
-// @media screen and (min-width: 768px) {
-//   .follow-form-wrapper {
-//     margin: 0 159px;
-//   }
-// }
 
 .follow-mail {
-  margin-bottom: 20px;
   padding-left: 16px;
   width: 100%;
+  max-width: 450px;
   height: 50px;
   color: $button-text-color;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: $dark-background-color;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 20px;
+  }
 
   &:focus {
     outline: none;
@@ -119,3 +112,100 @@
     background-color: $order-button-color;
   }
 }
+
+// old footer
+
+// .contacts-footer {
+//   font-weight: 400;
+//   line-height: 1.714;
+//   color: $button-alfa-text;
+//   & .contacts-item {
+//     margin-left: 0;
+//     margin-right: auto;
+//   }
+//   & .contacts-item:not(:last-child) {
+//     margin-bottom: 10px;
+//   }
+
+//   & .mail-link,
+//   & .tel-link {
+//     padding: 0 0;
+//   }
+// }
+
+// .address {
+//   margin-bottom: 10px;
+//   margin-right: auto;
+// }
+
+// .follow {
+//   margin-bottom: 20px;
+//   font-weight: 700;
+//   text-transform: uppercase;
+//   color: $button-text-color;
+// }
+
+// .flex-footer {
+//   display: flex;
+//   align-items: baseline;
+// }
+// .contact-flex-footer {
+//   margin-right: 70px;
+//   width: 230px;
+// }
+
+// .follow-footer {
+//   width: 206px;
+//   margin-right: 94px;
+// }
+
+// .follow-form-wrapper {
+//   display: flex;
+//   margin-top: 20px;
+// }
+// .follow-mail {
+//   margin-right: 11px;
+//   padding-left: 16px;
+//   width: 360px;
+//   height: 50px;
+//   color: $button-text-color;
+//   border: 1px solid rgba(255, 255, 255, 0.3);
+//   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//   border-radius: 4px;
+//   background-color: $dark-background-color;
+
+//   &:focus {
+//     outline: none;
+//   }
+//   &::placeholder {
+//     font-weight: 400;
+//     font-size: 16px;
+//     line-height: 1.25;
+//     color: rgba(255, 255, 255, 0.6);
+//   }
+// }
+
+// .follow-btn {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+
+//   min-width: 200px;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.875;
+//   letter-spacing: 0.06em;
+//   color: $button-text-color;
+//   background-color: $focus-color;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   border-radius: 4px;
+
+//   transition-property: background-color;
+//   transition-duration: $transition-duration;
+//   transition-timing-function: $timing-function;
+
+//   &:hover,
+//   &:focus {
+//     background-color: $order-button-color;
+//   }
+// }
