--- a/css/main.css
+++ b/css/main.css
@@ -1080,14 +1080,36 @@ label > a {
 }
 
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .portfolio-button-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-button-list {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-button-list {
+    justify-content: center;
+    margin-bottom: 50px;
+  }
 }
 
 .portfolio-button {
@@ -1118,9 +1140,23 @@ label > a {
   margin-right: 10px;
 }
 
+@media screen and (max-width: 767px) {
+  .portfolio-button-item:not(:nth-last-child(-n-2)) {
+    margin-bottom: 15px;
+  }
+}
+
 .portfolio-galery {
   display: flex;
   flex-wrap: wrap;
+}
+
+.pfl-container {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+  background: #ffffff;
 }
 
 .portfolio-galery-title {
@@ -1140,19 +1176,34 @@ label > a {
 }
 
 .portfolio-galery-item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
   background: #ffffff;
   outline: 1px solid #eeeeee;
 }
 
-.portfolio-galery-item:nth-child(3n) {
-  margin-right: 0;
+.portfolio-galery-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
-.portfolio-galery-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-galery-item {
+    width: 354px;
+  }
+  .portfolio-galery-item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-galery-item {
+    margin-right: 30px;
+    width: 370px;
+  }
+  .portfolio-galery-item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .portfolio-galery-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
 
 .portfolio-galery-link {
