--- a/sass/layot/_portfolio-galery.scss
+++ b/sass/layot/_portfolio-galery.scss
@@ -1,16 +1,16 @@
-// .pfl-container {
-//   @include paddings-t-b(20px);
-//   @include paddings-r-l(24px);
-//   background: $button-text-color;
-
 .portfolio-galery {
   display: flex;
   flex-wrap: wrap;
 }
 
+.pfl-container {
+  @include paddings-t-b(20px);
+  @include paddings-r-l(24px);
+  background: $button-text-color;
+}
+
 .portfolio-galery-title {
   margin-bottom: 4px;
-
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -26,18 +26,26 @@
 }
 
 .portfolio-galery-item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-
   background: $button-text-color;
   outline: 1px solid $accent-border;
-
-  &:nth-child(3n) {
-    margin-right: 0;
+  &:not(:last-child) {
+    margin-bottom: 30px;
   }
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+    &:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+    width: 370px;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 }
 
