--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 //layot//
 @import './layot/forms';
 @import './layot/header';
+@import './layot/mobile-menu';
 @import './layot/footer';
 @import './layot/hero';
 @import './layot/features';
