--- a/css/main.css
+++ b/css/main.css
@@ -354,8 +354,6 @@ label > a {
 }
 
 .header {
-  padding-top: 10px;
-  padding-bottom: 10px;
   border-bottom: 1px solid #ececec;
 }
 
@@ -365,38 +363,6 @@ label > a {
   }
   .contacts {
     display: none;
-  }
-  .burger-btn,
-  .mobile-close-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-  }
-  .mobile-close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-  .mobile-menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%);
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    max-width: 480px;
-    width: 100%;
-    height: 100vw;
-    background-color: #ffffff;
-    padding-top: 48px;
-    padding-bottom: 48px;
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-  .mobile-menu.is-open {
-    transform: translateX(-50%) translateY(0%);
   }
 }
 
@@ -409,15 +375,85 @@ label > a {
   }
 }
 
+.logo {
+  margin-right: 90px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1, 167;
+  color: #000000;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.192;
+  }
+}
+
 .logo-first-part {
   color: #2196f3;
+}
+
+.navigation-link {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-link:hover, .navigation-link:focus {
+  color: #2196f3;
+}
+
+.navigation-link.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  transform: scaleY(1);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-link.current:hover::after,
+.navigation-link.current:focus::after {
+  transform: scaleY(0);
+}
+
+.navigation-item .navigation-link.current {
+  color: #2196f3;
+}
+
+.navigation-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .mail-link {
   display: flex;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
   letter-spacing: 0.02em;
   color: #757575;
   transition-property: color;
@@ -432,8 +468,6 @@ label > a {
 .tel-link {
   display: flex;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
   letter-spacing: 0.02em;
   color: #757575;
   transition-property: color;
@@ -449,6 +483,125 @@ label > a {
 .icon-tel {
   margin-right: 10px;
   fill: currentColor;
+}
+
+@media screen and (min-width: 1200px) {
+  .tel-link,
+  .mail-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+.burger-button-wrapper {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.burger-btn,
+.mobile-close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  fill: currentColor;
+  cursor: pointer;
+}
+
+.burger-btn:hover, .burger-btn:focus,
+.mobile-close-btn:hover,
+.mobile-close-btn:focus {
+  fill: #2196f3;
+}
+
+.mobile-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  background-color: #ffffff;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-right: 40px;
+  padding-left: 40px;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(-50%) translateY(0%);
+}
+
+.mobile-menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.mobile-menu-link {
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 1, 175;
+  color: #212121;
+}
+
+.mobile-menu-link.current {
+  color: #2196f3;
+}
+
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-social-link-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mobile-social-link-link {
+  padding-right: 10px;
+  padding-left: 10px;
+  font-size: 18px;
+  line-height: 1, 222;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.padding-left {
+  padding-left: 0px;
+}
+
+.mobile-social-link-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-tel-link {
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mobile-mail-link {
+  font-size: 24px;
+  line-height: 1, 167;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
 
 .contact-flex-footer, .follow-footer, .follow-btn {
