--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -202,8 +202,6 @@ button {
 }
 
 .header {
-  padding-top: 10px;
-  padding-bottom: 10px;
   border-bottom: 1px solid #ececec;
 }
 
@@ -213,38 +211,6 @@ button {
   }
   .contacts {
     display: none;
-  }
-  .burger-btn,
-  .mobile-close-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-  }
-  .mobile-close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-  .mobile-menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%);
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    max-width: 480px;
-    width: 100%;
-    height: 100vw;
-    background-color: #ffffff;
-    padding-top: 48px;
-    padding-bottom: 48px;
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-  .mobile-menu.is-open {
-    transform: translateX(-50%) translateY(0%);
   }
 }
 
@@ -257,15 +223,85 @@ button {
   }
 }
 
+.logo {
+  margin-right: 90px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1, 167;
+  color: #000000;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.192;
+  }
+}
+
 .logo-first-part {
   color: #2196f3;
+}
+
+.navigation-link {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-link:hover, .navigation-link:focus {
+  color: #2196f3;
+}
+
+.navigation-link.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  transform: scaleY(1);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-link.current:hover::after,
+.navigation-link.current:focus::after {
+  transform: scaleY(0);
+}
+
+.navigation-item .navigation-link.current {
+  color: #2196f3;
+}
+
+.navigation-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .mail-link {
   display: flex;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
   letter-spacing: 0.02em;
   color: #757575;
   transition-property: color;
@@ -280,8 +316,6 @@ button {
 .tel-link {
   display: flex;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
   letter-spacing: 0.02em;
   color: #757575;
   transition-property: color;
@@ -297,6 +331,14 @@ button {
 .icon-tel {
   margin-right: 10px;
   fill: currentColor;
+}
+
+@media screen and (min-width: 1200px) {
+  .tel-link,
+  .mail-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .contact-flex-footer, .follow-footer, .follow-btn {
