--- a/sass/layot/_header.scss
+++ b/sass/layot/_header.scss
@@ -1,5 +1,4 @@
 .header {
-  @include paddings-t-b(10px);
   border-bottom: 1px solid #ececec;
 }
 
@@ -11,43 +10,7 @@
   .contacts {
     display: none;
   }
-  .burger-btn,
-  .mobile-close-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-  }
-
-  .mobile-close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-
-  .mobile-menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%);
-    transition-property: transform;
-    transition-duration: $transition-duration;
-    transition-timing-function: $timing-function;
-
-    max-width: 480px;
-    width: 100%;
-    height: 100vw;
-    background-color: $button-text-color;
-
-    @include paddings-t-b(48px);
-    @include paddings-r-l(40px);
-  }
-
-  .mobile-menu.is-open {
-    transform: translateX(-50%) translateY(0%);
-  }
 }
-
 @media screen and(min-width:768px) {
   .burger-btn {
     display: none;
@@ -57,75 +20,88 @@
   }
 }
 
-// .logo {
-//   margin-right: 90px;
+.logo {
+  margin-right: 90px;
 
-//   font-family: $logo-font;
-//   font-weight: 700;
-//   font-size: 26px;
-//   line-height: 1.192;
-//   color: $logo-second-part;
-// }
+  font-family: $logo-font;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1, 167;
+  color: $logo-second-part;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.192;
+  }
+}
 
 .logo-first-part {
   color: $focus-color;
 }
 
-// .navigation-link {
-//   position: relative;
-//   @include paddings-t-b(32px);
+.navigation-link {
+  position: relative;
+  @include paddings-t-b(32px);
 
-//   letter-spacing: 0.02em;
-//   color: $title-color;
+  letter-spacing: 0.02em;
+  color: $title-color;
 
-//   transition-property: color;
-//   transition-duration: $transition-duration;
-//   transition-timing-function: $timing-function;
-//   &:hover,
-//   &:focus {
-//     color: $focus-color;
-//   }
-// }
+  transition-property: color;
+  transition-duration: $transition-duration;
+  transition-timing-function: $timing-function;
+  &:hover,
+  &:focus {
+    color: $focus-color;
+  }
+}
 
-// .navigation-link.current::after {
-//   content: '';
-//   display: block;
-//   position: absolute;
-//   left: 0;
-//   bottom: 0;
+.navigation-link.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 
-//   width: 100%;
-//   height: 4px;
-//   background: $focus-color;
-//   border-radius: 2px;
-//   transform: scaleY(1);
+  width: 100%;
+  height: 4px;
+  background: $focus-color;
+  border-radius: 2px;
+  transform: scaleY(1);
 
-//   transition-property: transform;
-//   transition-duration: $transition-duration;
-//   transition-timing-function: $timing-function;
-// }
-// .navigation-link.current:hover::after,
-// .navigation-link.current:focus::after {
-//   transform: scaleY(0);
-// }
+  transition-property: transform;
+  transition-duration: $transition-duration;
+  transition-timing-function: $timing-function;
+}
+.navigation-link.current:hover::after,
+.navigation-link.current:focus::after {
+  transform: scaleY(0);
+}
 
-// .navigation-item {
-//   & .navigation-link.current {
-//     color: $focus-color;
-//   }
+.navigation-item {
+  & .navigation-link.current {
+    color: $focus-color;
+  }
 
-//   &:not(:last-child) {
-//     margin-right: 50px;
-//   }
-// }
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
+}
 
-// .contacts-item:not(:first-child) {
-//   margin-left: 50px;
-// }
+.contacts-item {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+
 .mail-link {
   display: flex;
   align-items: center;
-  @include paddings-t-b(32px);
 
   letter-spacing: 0.02em;
   color: $text-color;
@@ -142,7 +118,6 @@
 .tel-link {
   display: flex;
   align-items: center;
-  @include paddings-t-b(32px);
 
   letter-spacing: 0.02em;
   color: $text-color;
@@ -160,4 +135,11 @@
 .icon-tel {
   margin-right: 10px;
   fill: currentColor;
+}
+
+@media screen and (min-width: 1200px) {
+  .tel-link,
+  .mail-link {
+    @include paddings-t-b(32px);
+  }
 }
