--- a/sass/layot/_mobile-menu.scss
+++ b/sass/layot/_mobile-menu.scss
@@ -36,6 +36,7 @@
   background-color: $button-text-color;
   @include paddings-t-b(48px);
   @include paddings-r-l(40px);
+  z-index: 1000;
 }
 
 .mobile-menu.is-open {
