--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -12,6 +12,7 @@
 
 //layot//
 @import './layot/header';
+@import './layot/mobile-menu';
 @import './layot/footer';
 @import './layot/portfolio-nav';
 @import './layot/portfolio-galery';
