--- a/css/main.css
+++ b/css/main.css
@@ -122,14 +122,23 @@ button {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 530px;
-  height: 580px;
+  width: 95%;
+  max-width: 450px;
+  height: 95%;
+  overflow-y: scroll;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 530px;
+    height: 580px;
+  }
 }
 
 .btn-modal-close {
@@ -536,6 +545,7 @@ label > a {
   padding-bottom: 48px;
   padding-right: 40px;
   padding-left: 40px;
+  z-index: 1000;
 }
 
 .mobile-menu.is-open {
