--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -122,14 +122,23 @@ button {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 530px;
-  height: 580px;
+  width: 95%;
+  max-width: 450px;
+  height: 95%;
+  overflow-y: scroll;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 530px;
+    height: 580px;
+  }
 }
 
 .btn-modal-close {
@@ -339,6 +348,118 @@ button {
     padding-top: 32px;
     padding-bottom: 32px;
   }
+}
+
+.burger-button-wrapper {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.burger-btn,
+.mobile-close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  fill: currentColor;
+  cursor: pointer;
+}
+
+.burger-btn:hover, .burger-btn:focus,
+.mobile-close-btn:hover,
+.mobile-close-btn:focus {
+  fill: #2196f3;
+}
+
+.mobile-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  background-color: #ffffff;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-right: 40px;
+  padding-left: 40px;
+  z-index: 1000;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(-50%) translateY(0%);
+}
+
+.mobile-menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.mobile-menu-link {
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 1, 175;
+  color: #212121;
+}
+
+.mobile-menu-link.current {
+  color: #2196f3;
+}
+
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-social-link-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mobile-social-link-link {
+  padding-right: 10px;
+  padding-left: 10px;
+  font-size: 18px;
+  line-height: 1, 222;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.padding-left {
+  padding-left: 0px;
+}
+
+.mobile-social-link-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-tel-link {
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mobile-mail-link {
+  font-size: 24px;
+  line-height: 1, 167;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
 
 .contact-flex-footer, .follow-footer, .follow-btn {
