--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -30,9 +30,11 @@
   transform: translate(-50%, -50%) scale(1);
 
   padding: 40px;
+  width: 95%;
+  max-width: 450px;
+  height: 95%;
+  overflow-y: scroll;
 
-  width: 530px;
-  height: 580px;
   background-color: $button-text-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -41,6 +43,11 @@
   transition-property: transform;
   transition-duration: $transition-duration;
   transition-timing-function: $timing-function;
+
+  @media screen and (min-width: 1200px) {
+    width: 530px;
+    height: 580px;
+  }
 }
 
 .btn-modal-close {
